Added an Android mobile operator app on Google Play Store Changed to an embedded Jetty server for increased performance and functionality Upgraded to Vaadin 8.10.5 Upgraded Quartz to version 2.3.2 Miscellaneous stability improvements